# marble-madness-3d

./: CMakeLists.txt  CMakeLists.txt~  README.md  TODO  main.cpp  marble-madness-3d.kdev4  remove-backup-files.sh  terminal-plan  test-level
.kdev4/: _custom.kdev4  marble-madness-3d.kdev4
assets/meshes/: char.blend  char.dae  companioncube.dae  cube.blend  cube.dae  house.dae  icosphere.dae  icosphere1.dae  icosphere2.dae  icosphere4.dae  icosphere5.dae  icosphere6.dae  materialtest.dae  model.3ds  statue.dae  suzanne-highpoly.dae  suzanne-midpoly.dae  suzanne.dae  test-cube.dae
include/: factory.hpp  game.hpp  singleton.hpp  singleton.hpp~
include/device/: device.hpp  devicefactory.hpp~  devicemanager.hpp  devicemanager.hpp~  devicesdlopengl.hpp  devicesystem.hpp~  inputsdl.hpp  sdlopengldevice.hpp
include/engine/: command.hpp  device.hpp  devicesdlopengl.hpp  entity.hpp  scenemanager.hpp  terminal.hpp
include/engine/device/: device.hpp  devicemanager.hpp  devicesdlopengl.hpp  inputmanager.hpp  inputsdl.hpp
include/engine/kernel/: command.hpp  commandobject.hpp  common.hpp  component.hpp  device.hpp  devicemanager.hpp  entity.hpp  inputmanager.hpp  matrix3x3.hpp  quaternion.hpp  scalar.hpp  transform.hpp  vector3.hpp
include/engine/physics/: physicsmanager.hpp  physicsworld.hpp  rigidbody.hpp
include/engine/renderer/: camera.hpp  light.hpp  renderablemesh.hpp  renderer.hpp  rendermanager.hpp  rendersystem.hpp
include/engine/resources/: generalmeshloader.hpp  material.hpp  mesh.hpp  meshdata.hpp  model.hpp  modelloader.hpp  resourcemanager.hpp  resources.hpp  texture.hpp  uvmap.hpp
include/engine/scene/: component.hpp  entity.hpp  scenemanager.hpp
include/engine/terminal/: command.hpp  commandobject.hpp  terminal.hpp  tokentable.hpp  uniqueidgenerator.hpp
include/terminal/: command.hpp  commandobject.hpp  terminal.hpp
src/: CMakeLists.txt  CMakeLists.txt~  FindASSIMP.cmake  game.cpp  main.cpp  main.cpp~
src/device/: CMakeLists.txt  CMakeLists.txt~  device.cpp  devicefactory.cpp  devicemanager.cpp  devicesdlopengl.cpp  devicesystem.cpp  inputsdl.cpp  sdlopengldevice.cpp
src/engine/: CMakeLists.txt  command.cpp  commandobject.cpp  component.cpp  device.cpp  devicemanager.cpp  devicesdlopengl.cpp  entity.cpp  inputmanager.cpp  scenemanager.cpp  terminal.cpp  tokentable.cpp
src/engine/device/: CMakeLists.txt  device.cpp  devicemanager.cpp  devicesdlopengl.cpp  inputsdl.cpp
src/engine/kernel/: command.cpp  commandobject.cpp  component.cpp  device.cpp  devicemanager.cpp  entity.cpp  inputmanager.cpp  terminal.cpp  tokentable.cpp  transform.cpp
src/engine/physics/: physicsmanager.cpp  physicsworld.cpp  rigidbody.cpp
src/engine/renderer/: camera.cpp  light.cpp  renderablemesh.cpp  renderer.cpp  rendermanager.cpp  rendersystem.cpp
src/engine/resources/: generalmeshloader.cpp  material.cpp  mesh.cpp  meshdata.cpp  model.cpp  modelloader.cpp  resourcemanager.cpp  resources.cpp  texture.cpp  uvmap.cpp
src/engine/scene/: CMakeLists.txt  entity.cpp  scenemanager.cpp
src/engine/terminal/: command.cpp  commandobject.cpp  terminal.cpp  tokentable.cpp
src/terminal/: CMakeLists.txt  command.cpp  commandobject.cpp  terminal.cpp  tokentable.cpp
